[project]
name = "arb-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi-pagination>=0.13.1",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.27",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.1",
    "greenlet>=3.2.2",
    "slowapi>=0.1.8",
    "redis>=5.0.1",
    "pydantic-settings>=2.9.1",
    "logfire[fastapi,sqlite3]>=3.16.0",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[tool.uv.workspace]
members = [
    "arb_crud",
]
